; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_create_output.c_create_output.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_create_output.c_create_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlr_backend = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wlr_backend*, i8*)* @create_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_output(%struct.wlr_backend* %0, i8* %1) #0 {
  %3 = alloca %struct.wlr_backend*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.wlr_backend* %0, %struct.wlr_backend** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %20

12:                                               ; preds = %2
  %13 = load %struct.wlr_backend*, %struct.wlr_backend** %3, align 8
  %14 = call i64 @wlr_backend_is_wl(%struct.wlr_backend* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load %struct.wlr_backend*, %struct.wlr_backend** %3, align 8
  %18 = call i32 @wlr_wl_output_create(%struct.wlr_backend* %17)
  %19 = load i32*, i32** %5, align 8
  store i32 1, i32* %19, align 4
  br label %20

20:                                               ; preds = %11, %16, %12
  ret void
}

declare dso_local i64 @wlr_backend_is_wl(%struct.wlr_backend*) #1

declare dso_local i32 @wlr_wl_output_create(%struct.wlr_backend*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
